--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Firebase
+.firebaserc
+firebase.json
+/.firebase
+
 # Editor directories and files
 .idea
 .vscode
