--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
-    "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "sass": "^1.89.2",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "engines": {
+    "node": ">=14.x <18"
   }
 }
